# google-cloud-rust-example

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
chat/: Cargo.toml
chat/src/: connection.rs  main.rs
ddl/: schema.sql
lib/: Cargo.toml
lib/src/: trace.rs
pubsub/: README.md  docker-compose.yml  k8s-rust.tmpl.yaml
pubsub/rust/: Cargo.toml  Dockerfile
pubsub/rust/src/: init.rs  main.rs
pubsub/scenario/locust-tasks/: tasks.py
scenario/k8s/: locust-worker-deployment.yaml
scenario/locust-tasks/: run.sh  tasks.py
spanner/: README.md  docker-compose.yml  k8s-go.tmpl.yaml  k8s-loadtest.tmpl.yaml  k8s-rust.tmpl.yaml
spanner/go/: Dockerfile  go.mod  go.sum
spanner/go/cmd/: main.go
spanner/go/cmd/internal/: handler.go  model.go
spanner/rust/: Cargo.toml  Dockerfile  k8s.tmpl.yaml
spanner/rust/src/: handler.rs  init.rs  main.rs  model.rs
spanner/rust/src/model/: mod.rs  user.rs  user_character.rs  user_item.rs
spanner/scenario/: Dockerfile  k8s.tmpl.yaml
spanner/scenario/k8s/: README.md  locust-master-deployment.yaml  locust-master-service.yaml
spanner/scenario/locust-tasks/: requirements.txt  tasks.py
src/: handler.rs  main.rs  model.rs
webapi/: Cargo.toml
webapi/ddl/: schema.sql
webapi/src/: api.rs  di.rs  main.rs
webapi/src/application/: mod.rs
webapi/src/application/api/: mod.rs  user_api.rs
webapi/src/application/usecase/: mod.rs  user_use_case.rs
webapi/src/domain/: mod.rs
webapi/src/domain/model/: mod.rs  user.rs  user_character.rs  user_item.rs
webapi/src/domain/modelx/: mod.rs  user_bundle.rs
webapi/src/domain/repository/: mod.rs  user_character_repository.rs  user_item_repository.rs  user_repository.rs
webapi/src/infrastructure/repository/: mod.rs  user_character_repository.rs  user_item_repository.rs  user_repository.rs
webapi/src/lib/: context.rs
