[workspace]
members = [
    "lib",
    "webapi",
    "chat"
]

[workspace.dependencies]
tracing = "0.1"
tracing-stackdriver = { version="0.6.2", features=["opentelemetry"]}
tracing-subscriber = {version="0.3", features=["std", "env-filter"]}
opentelemetry = {version="0.17", features=["rt-tokio", "trace"]}
opentelemetry-stackdriver = { version= "0.14.0", default-features = false }
tracing-opentelemetry = "0.17"

thiserror = { version="1.0", default-features= false }
anyhow = { version="1.0", default-features= false }

async-trait = "0.1"
env_logger = "0.9"
tonic = { version = "0.6", features = ["prost", "tls-webpki-roots"] }
time = { version="0.3", features = ["serde"] }
rand = "0.8"
uuid = { version="1.1.2", features=["v4"] }
prost-types = "0.11"
serde = "1.0"
serde_json = "1.0"
parking_lot = "0.12"
futures-util = "0.3"

tokio = { version="1.20", features=["rt-multi-thread", "signal"] }
tokio-util = "0.7.7"

google-cloud-pubsub = { git = "https://github.com/yoshidan/google-cloud-rust", branch="main", features=["trace"]}
google-cloud-storage = { git = "https://github.com/yoshidan/google-cloud-rust", branch="main", default-features=false, features=["trace","rustls-tls"]}
google-cloud-gax = { git = "https://github.com/yoshidan/google-cloud-rust",  branch="main"}
google-cloud-googleapis= { git = "https://github.com/yoshidan/google-cloud-rust",  branch="main"}
google-cloud-spanner-derive = { git = "https://github.com/yoshidan/google-cloud-rust", branch="main"}
google-cloud-spanner = { git = "https://github.com/yoshidan/google-cloud-rust", branch="main", features=["trace"]}
google-cloud-default = { git = "https://github.com/yoshidan/google-cloud-rust", branch="main", default-features=false, features=["spanner", "storage", "pubsub", "rustls-tls"]}
google-cloud-auth= { git = "https://github.com/yoshidan/google-cloud-rust", branch = "main", default-features=false, features=["rustls-tls"]}
google-cloud-token= { git = "https://github.com/yoshidan/google-cloud-rust", branch = "main"}
