[package]
name = "google-cloud-example-chat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.3"

google-cloud-example-lib = { path = "../lib" }

tracing.workspace = true
tokio.workspace = true
env_logger.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait = "0.1"
tonic.workspace = true
time.workspace = true
rand.workspace = true
uuid.workspace = true
prost-types.workspace = true
serde.workspace = true
parking_lot.workspace = true
futures-util.workspace = true
tokio-util.workspace = true

google-cloud-pubsub.workspace = true
google-cloud-storage.workspace = true
google-cloud-gax.workspace = true
google-cloud-googleapis.workspace = true
google-cloud-default.workspace = true