[package]
name = "google-cloud-example-lib"
version = "0.1.0"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-stackdriver.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
opentelemetry-stackdriver.workspace = true
tracing-opentelemetry.workspace = true
tokio.workspace = true
thiserror.workspace = true
anyhow .workspace = true
google-cloud-auth.workspace = true
google-cloud-token.workspace = true
tonic.workspace = true
async-trait.workspace = true