[package]
name = "google-cloud-example-webapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-http = "3.2.2"

google-cloud-example-lib = { path = "../lib" }

tracing = "0.1"
tokio = { version="1.20", features=["rt-multi-thread", "signal"] }
env_logger = "0.9"
thiserror = { version="1.0", default-features= false }
anyhow = { version="1.0", default-features= false }
async-trait = "0.1"
tonic = { version = "0.6", features = ["prost", "tls-webpki-roots"] }
time = { version="0.3", features = ["serde"] }
rand = "0.8"
uuid = { version="1.1.2", features=["v4"] }
prost-types = "0.11"
serde = "1.0"
serde_json = "1.0"

google-cloud-spanner-derive = { git = "https://github.com/yoshidan/google-cloud-rust", branch="main"}
google-cloud-spanner = { git = "https://github.com/yoshidan/google-cloud-rust", branch="main", features=["trace", "rustls-tls"]}
google-cloud-pubsub = { git = "https://github.com/yoshidan/google-cloud-rust", branch="main", features=["trace", "rustls-tls"]}
google-cloud-storage = { git = "https://github.com/yoshidan/google-cloud-rust",  branch="main", features=["trace", "rustls-tls"]}
google-cloud-gax = { git = "https://github.com/yoshidan/google-cloud-rust",  branch="main"}
google-cloud-googleapis= { git = "https://github.com/yoshidan/google-cloud-rust",  branch="main"}
google-cloud-auth= { git = "https://github.com/yoshidan/google-cloud-rust",  branch="main", features=["rustls-tls"]}
