[package]
name = "google-cloud-example-webapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-http = "3.2.2"

google-cloud-example-lib = { path = "../lib" }

tracing.workspace = true
tokio.workspace = true
env_logger.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
tonic.workspace = true
time.workspace = true
rand.workspace = true
uuid.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true

google-cloud-spanner-derive.workspace = true
google-cloud-spanner.workspace = true
google-cloud-pubsub.workspace = true
google-cloud-storage.workspace = true
google-cloud-gax.workspace = true
google-cloud-googleapis.workspace = true
google-cloud-default.workspace = true