[package]
name = "google-cloud-rust-example-pubsub"
version = "0.1.0"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-stackdriver = "0.3"
tracing-subscriber = {version="0.3", features=["env-filter"]}
opentelemetry = {version="0.17", features=["rt-tokio"]}
opentelemetry-stackdriver = { version= "0.14", features=["gcp_auth"]}
tracing-opentelemetry = "0.17"
google-cloud-pubsub = { git = "https://github.com/yoshidan/google-cloud-rust", branch = "featurea/add_tracing"}
google-cloud-gax= { git = "https://github.com/yoshidan/google-cloud-rust", branch = "featurea/add_tracing"}
google-cloud-googleapis= { git = "https://github.com/yoshidan/google-cloud-rust", branch = "featurea/add_tracing"}
warp = "0.3.1"
tokio = "1.17.0"
env_logger = "0.8.1"
futures-util= "0.3.21"
parking_lot = "0.12.0"
chrono = "0.4.19"
uuid = { version="0.8", features = ["v4"] }