[package]
name = "google-cloud-rust-example-pubsub"
version = "0.1.0"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-stackdriver = { git = "https://github.com/yoshidan/tracing-stackdriver", branch = "feature/with-span-trace-id-fixbug" }
tracing-subscriber = {version="0.3", features=["std", "env-filter"]}
google-cloud-pubsub = { git = "https://github.com/yoshidan/google-cloud-rust", branch = "main"}
google-cloud-gax= { git = "https://github.com/yoshidan/google-cloud-rust", branch = "main"}
google-cloud-googleapis= { git = "https://github.com/yoshidan/google-cloud-rust", branch = "main"}
warp = "0.3.1"
tokio = { version = "1.14", features = ["full"] }
env_logger = "0.8.1"
futures-util= "0.3.21"
parking_lot = "0.12.0"
chrono = "0.4.19"
uuid = { version="0.8", features = ["v4"] }
tonic = "0.6"