[package]
name = "google-cloud-rust-example-spanner"
version = "0.1.0"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
google-cloud-spanner = { git = "https://github.com/yoshidan/google-cloud-rust", branch = "main"}
google-cloud-gax = { git = "https://github.com/yoshidan/google-cloud-rust", branch = "main"}
google-cloud-googleapis= { git = "https://github.com/yoshidan/google-cloud-rust", branch = "main"}
tokio = { version = "1.7", features = ["full"] }
tonic = "0.6"
warp = "0.3"
chrono = "0.4"
prost-types = "0.9.0"
thiserror = "1.0"
env_logger = "0.9"
uuid = { version="0.8", features = ["v4"] }
rand = "0.8"