[package]
name = "google-cloud-rust-example-spanner"
version = "0.1.0"
authors = ["yoshidan <naohiro.y@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing = "0.1"
tracing-stackdriver = { git = "https://github.com/yoshidan/tracing-stackdriver", branch = "feature/with-span-trace-id-fixbug", features=["otel"]}
tracing-subscriber = {version="0.3", features=["std", "env-filter"]}
opentelemetry = {version="0.17", features=["rt-tokio", "trace"]}
opentelemetry-stackdriver = { version= "0.14" }
tracing-opentelemetry = "0.17"
google-cloud-spanner = { git = "https://github.com/yoshidan/google-cloud-rust", branch = "featurea/add_tracing"}
google-cloud-gax = { git = "https://github.com/yoshidan/google-cloud-rust", branch = "featurea/add_tracing"}
google-cloud-googleapis= { git = "https://github.com/yoshidan/google-cloud-rust", branch = "featurea/add_tracing"}
google-cloud-auth= { git = "https://github.com/yoshidan/google-cloud-rust", branch = "featurea/add_tracing"}
tokio = { version = "1.14", features = ["full"] }
tonic = "0.6"
tonic-web = "0.2.0"
warp = "0.3"
chrono = "0.4"
prost-types = "0.9.0"
thiserror = "1.0"
env_logger = "0.9"
anyhow = "1.0"
uuid = { version="0.8", features = ["v4"] }
rand = "0.8"
rust_decimal = "1.18"
async-trait = "0.1"